# OrientationVisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  imgui.ini  main.cpp  style.sh
.github/workflows/: style-check.yml
ansible/: ansible.sh  dev.yml
cmake/: Packing.cmake  binaries.cmake  deps.cmake  installation.cmake  macros.cmake  utils.cmake  viz.conf
resources/: Coords.mtl  Dockerfile  Globe copy.mtl  Globe.mtl  OrientationVizualizer.sh  coords.mtl  globe.mtl  imgui.ini  shader.wgsl  vector.mtl
resources/blender/: coords.blend  coords.blend1  globe.blend  globe.blend1
scripts/: Dockerfile  bootstrap.sh
scripts/build_test/: bootstrap.sh
scripts/ci/: Dockerfile  style.sh
src/: Application.cpp  Application.h  GLFW.cpp  GLFW.hpp  Gui.cpp  Gui.hpp  LieAlgebra.hpp  Rendering.Gui.cpp  Rendering.cpp  Rendering.hpp  WebGPU.cpp  main.cpp  utils.hpp
testing/: Dockerfile
verifying/: CMakeLists.txt  main.cpp
